Expose DataItems via `SubscriptionModel::getDataItems`